# analise_exploratoria

./: df_limpo.parquet.gzip  pyproject.toml  testes_ga.ipynb
