[tool.poetry]
name = "eduardobrennand-tcc"
version = "0.1.0"
description = ""
authors = ["Eduardo Brennand <eduardolirabrennand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
fastf1 = "^3.4.0"
datetime = "^5.5"
matplotlib = "^3.9.1.post1"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.1"
notebook = "^7.2.2"
ipympl = "^0.9.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
